--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html>
 <head>
 <meta charset="utf-8">
+
 <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
+<!-- Bootstrap CDN -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
 <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 
@@ -10,39 +14,80 @@
 </head>
 <body>
 
-<header class="container">
-<h1 id="header">Crystals game</h1>
+<header>  
+	<div class="container col-xs-12 col-sm-12 col-md-12">
+	<div class="jumbotron">
+    <h1 id="header">Crystals game</h1>
+  </div>
+</div>
+
 </header>
 
-<div class="container" id="instructions">
-<p>When the game starts, you'll receive a random number.</p>
-<br>
-<p>Each of the four crystals below has a value, which changes every round. Every time you click on one, it adds value to your total score</p>
-<br>
-<p>Your goal is to match your total score to the number below</p>
-<br>
-<p>If you go over, you lose and the game starts over with a brand new goal and a new value in each crystal. Good luck!</p>
+<div class="container col-xs-12 col-sm-12 col-md-12">
+	<div class="panel panel-default">
+  <div class="panel-heading">
+    <h2 class="panel-title">Instructions</h2>
+  </div>
+  <div class="panel-body" id="instructions">
+	<p>1 - When the game starts, you'll receive a random number.</p>
+	<br>
+	<p>Each of the four crystals below has a value, which changes every round. Every time you click on one, it adds value to your total score</p>
+	<br>
+	<p>Your goal is to match your total score to the number below.</p>
+	<br>
+	<p>If you go over, you lose and the game starts over with a brand new goal and a new value in each crystal. Good luck!</p>
+  </div>
+</div>
 </div>
 
-<div class="container" id="value">
-<span id="random-number"></span>
+<div class="container col-xs-12 col-sm-12 col-md-12">
+<div class="panel panel-default">
+  <div class="panel-body">
+	<div class="container" id="value">
+	<p>Goal:</p>
+	<span id="random-number"></span>
+	</div>
+  </div>
+</div>
 </div>
 
-<div class="container">
-<p>Wins: <span id="wins"></span></p>
-<p>Losses: <span id="losses"></span></p>
+<div class="container col-xs-12 col-sm-12 col-md-12">
+<div class="panel panel-default">
+  <div class="panel-body">
+	<div class="container">
+	<p>Wins: <span id="wins"></span></p>
+	<p>Losses: <span id="losses"></span></p>
+	</div>
+  </div>
+</div>
 </div>
 
-<div class="container">
-<img id="crystal1" src="assets/images/crystal1.png" class="crystals">
-<img id="crystal2" src="assets/images/crystal2.png" class="crystals">
-<img id="crystal3" src="assets/images/crystal3.png" class="crystals">
-<img id="crystal4" src="assets/images/crystal4.png" class="crystals">
+<div class="container col-xs-12 col-sm-12 col-md-12">
+<div class="panel panel-default">
+  <div class="panel-body">
+	<div class="container">
+		<p>Your Score is: <span id="score">0</span></p>
+		</div>
+  </div>
+</div>
 </div>
 
-<div class="container">
-<p>Your Score is: <span id="score">0</span></p>
+
+<div class="container col-xs-12 col-sm-12 col-md-12">
+<div class="panel panel-default">
+  <div class="panel-body">
+	<div class="container">
+	<img id="crystal1" src="assets/images/crystal1.png" class="crystals">
+	<img id="crystal2" src="assets/images/crystal2.png" class="crystals">
+	<img id="crystal3" src="assets/images/crystal3.png" class="crystals">
+	<img id="crystal4" src="assets/images/crystal4.png" class="crystals">
+	</div>
+  </div>
 </div>
+</div>
+
+
+
 
 
 <script type="text/javascript" src="assets/script/script.js"></script>
