--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <meta charset="utf-8">
 
 <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
+<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 <!-- Bootstrap CDN -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 
-	<title>Crystals game</title>
+	<title>A game of Crystals</title>
 </head>
 <body>
 
@@ -77,10 +78,10 @@
 <div class="panel panel-default">
   <div class="panel-body">
 	<div class="container">
-	<img id="crystal1" src="assets/images/crystal1.png" class="crystals">
-	<img id="crystal2" src="assets/images/crystal2.png" class="crystals">
-	<img id="crystal3" src="assets/images/crystal3.png" class="crystals">
-	<img id="crystal4" src="assets/images/crystal4.png" class="crystals">
+	<img class="minerals" id="crystal1" src="assets/images/crystal1.png" class="crystals">
+	<img class="minerals" id="crystal2" src="assets/images/crystal2.png" class="crystals">
+	<img class="minerals" id="crystal3" src="assets/images/crystal3.png" class="crystals">
+	<img class="minerals" id="crystal4" src="assets/images/crystal4.png" class="crystals">
 	</div>
   </div>
 </div>
