--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 
-<script src="https://code.jquery.com/jquery-3.1.1.js"></script>
+
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 <!-- Bootstrap CDN -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -30,9 +30,9 @@
     <h2 class="panel-title">Instructions</h2>
   </div>
   <div class="panel-body" id="instructions">
-	<p>1 - When the game starts, you'll receive a random number.</p>
+	<p>When the game starts, you'll receive a random number.</p>
 	<br>
-	<p>Each of the four crystals below has a value, which changes every round. Every time you click on one, it adds value to your total score</p>
+	<p>Each of the four crystals below has a value from 1-12 which changes every round. Every time you click on a crystal, it adds value to your total score</p>
 	<br>
 	<p>Your goal is to match your total score to the number below.</p>
 	<br>
@@ -67,7 +67,7 @@
 <div class="panel panel-default">
   <div class="panel-body">
 	<div class="container">
-		<p>Your Score is: <span id="score">0</span></p>
+		<p>Your Score is: <span id="score"></span></p>
 		</div>
   </div>
 </div>
@@ -90,7 +90,7 @@
 
 
 
-
+<script src="https://code.jquery.com/jquery-3.1.1.js"></script>
 <script type="text/javascript" src="assets/script/script.js"></script>
 
 </body>
