--- a/index.html
+++ b/index.html
@@ -2,93 +2,56 @@
 <html>
 <head>
 <meta charset="utf-8">
-
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-<!-- Bootstrap CDN -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
 <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 
-	<title>A game of Crystals</title>
+<title>A game of Crystals</title>
 </head>
 <body>
 
 <header>  
-	<div class="container col-xs-12 col-sm-12 col-md-12">
 	<div class="jumbotron">
-    <h1 id="header">Crystals game</h1>
-  </div>
-</div>
-
+    	<h1>Crystals</h1>
+	</div>
 </header>
 
-<div class="container col-xs-12 col-sm-12 col-md-12">
-	<div class="panel panel-default">
-  <div class="panel-heading">
-    <h2 class="panel-title">Instructions</h2>
-  </div>
-  <div class="panel-body" id="instructions">
-	<p>When the game starts, you'll receive a random number.</p>
-	<br>
-	<p>Each of the four crystals below has a value from 1-12 which changes every round. Every time you click on a crystal, it adds value to your total score</p>
-	<br>
-	<p>Your goal is to match your total score to the number below.</p>
-	<br>
-	<p>If you go over, you lose and the game starts over with a brand new goal and a new value in each crystal. Good luck!</p>
-  </div>
-</div>
+<div class="container">
+<!-- Instructions -->
+	<h1 class="title">Instructions</h1>
+	<hr>
+
+	<ol class="instructions">
+		<li>When the game starts, you'll receive a random goal</li>
+		<li>Click on a crystal to add to your score. The value (1-12) resets every round.</li>
+		<li>Your goal is to match your total score to the number below.</li>
+		<li>If you go over, the game starts over with a brand new goal and a new value in each crystal. Good luck!</li>
+	</ol>
+
+<!-- Goal and results -->
+<div class="scoreboard" id="value">
+	<p class="results">Goal: <span id="random-number"></span></p>
+<!-- wins & losses -->
+	<p class="results">Wins: <span id="wins"></span></p>
+	<p class="results">Losses: <span id="losses"></span></p>
+<!-- Score -->
+	<p class="results">Your Score is: <span id="score"></span></p>
 </div>
 
-<div class="container col-xs-12 col-sm-12 col-md-12">
-<div class="panel panel-default">
-  <div class="panel-body">
-	<div class="container" id="value">
-	<p>Goal:</p>
-	<span id="random-number"></span>
-	</div>
-  </div>
-</div>
-</div>
-
-<div class="container col-xs-12 col-sm-12 col-md-12">
-<div class="panel panel-default">
-  <div class="panel-body">
-	<div class="container">
-	<p>Wins: <span id="wins"></span></p>
-	<p>Losses: <span id="losses"></span></p>
-	</div>
-  </div>
-</div>
-</div>
-
-<div class="container col-xs-12 col-sm-12 col-md-12">
-<div class="panel panel-default">
-  <div class="panel-body">
-	<div class="container">
-		<p>Your Score is: <span id="score"></span></p>
-		</div>
-  </div>
-</div>
-</div>
-
-
-<div class="container col-xs-12 col-sm-12 col-md-12">
-<div class="panel panel-default">
-  <div class="panel-body">
-	<div class="container">
+<!-- Crystal images -->
+<div class="crystals">
 	<img class="minerals" id="crystal1" src="assets/images/crystal1.png" class="crystals">
+
 	<img class="minerals" id="crystal2" src="assets/images/crystal2.png" class="crystals">
+
 	<img class="minerals" id="crystal3" src="assets/images/crystal3.png" class="crystals">
+
 	<img class="minerals" id="crystal4" src="assets/images/crystal4.png" class="crystals">
-	</div>
-  </div>
-</div>
 </div>
 
-
-
+</div>
 
 <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
 <script type="text/javascript" src="assets/script/script.js"></script>
